--- a/src/components/teaser/_teaser_light.scss
+++ b/src/components/teaser/_teaser_light.scss
@@ -1,9 +1,7 @@
 .light {
   .cmp-teaser {}
   .cmp-teaser__image {}
-  .cmp-teaser__content {
-    background-color: #FFFFFF;
-  }
+  .cmp-teaser__content {}
   .cmp-teaser__pretitle {
     color: $grey3;
   }
@@ -18,6 +16,21 @@
   }
   .cmp-teaser__action-container {}
   .cmp-teaser__action-link {
-    color: $text;
+    color: $dark-theme-text;
+  }
+
+  .cmp-teaser__action-link:first-child {
+    background-color: $accent;
+    border-color: $accent;
+    border-style: solid;
+    border-width: 0.125em;
+  }
+
+  .cmp-teaser__action-link:not(:first-child) {
+    background-color: rgba(0, 0, 0, 0);
+    color: $grey4;
+    border-color: $grey4;
+    border-style: solid;
+    border-width: 0.125em;
   }
 }
