--- a/src/components/teaser/_teaser_text_at_bottom.scss
+++ b/src/components/teaser/_teaser_text_at_bottom.scss
@@ -1,13 +1,7 @@
 .textAtBottom {
-  .cmp-teaser {
-    margin-left: 0.3em;
-    margin-right: 0.3em;
-  }
+  .cmp-teaser {}
   .cmp-teaser__image {}
-  .cmp-teaser__content {
-    margin: 0;
-
-  }
+  .cmp-teaser__content {}
   .cmp-teaser__pretitle {
     font-size: 0.625em;
   }
