--- a/src/components/title/_title.scss
+++ b/src/components/title/_title.scss
@@ -1,5 +1,10 @@
-.cmp-title {}
-.cmp-title__text {}
+.cmp-title {
+  margin-top: 5em;
+  margin-bottom: 1.25em;
+}
+.cmp-title__text {
+  margin: 0;
+}
 .cmp-title__link {
   text-decoration: none;
 }
