--- a/src/site/_variables.scss
+++ b/src/site/_variables.scss
@@ -22,6 +22,7 @@ $error:                 #D7373F;
 $error-hover:           #BE1E26;
 $success:               #268E6C;
 $success-hover:         #0D7553;
+$dark-theme-text: #FFFFFF;
 
 //== Grid
 
